// Licensed to the .NET Foundation under one or more agreements.
// The .NET Foundation licenses this file to you under the MIT license.

syntax = "proto3";

package aspire.v1;

//import "google/protobuf/struct.proto";
//import "google/protobuf/timestamp.proto";

////////////////////////////////////////////

////////////////////////////////////////////


////////////////////////////////////////////

////////////////////////////////////////////

// Models a snapshot of resource state

////////////////////////////////////////////


////////////////////////////////////////////

// Initiates a subscription for data about resources.
// A message received from the server when watching resources. Has multiple types of payload.
////////////////////////////////////////////

message ConsoleLogLine {
    string text = 1;
    // Indicates whether this line came from STDERR or not.
    optional bool is_std_err = 2;
}

// Initiates a subscription for the logs of a resource.
message WatchResourceConsoleLogsRequest {
    // Specifies the resource to watch logs from.
    string resource_name = 1;
}

// A message received from the server when watching resource logs.
// Contains potentially many lines to be appended to the log.
message WatchResourceConsoleLogsUpdate {
    repeated ConsoleLogLine log_lines = 1;
}

////////////////////////////////////////////

service DashboardService {
    rpc WatchResourceConsoleLogs(WatchResourceConsoleLogsRequest) returns (stream WatchResourceConsoleLogsUpdate);
}
